--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@designliquido/delegua-fisica": "0.0.2",
     "@designliquido/delegua-json": "^0.0.0",
     "@designliquido/delegua-matematica": "0.2.0",
-    "@designliquido/delegua-tempo": "0.0.1"
+    "@designliquido/delegua-tempo": "0.0.1",
+    "lodash.clonedeep": "^4.5.0"
   },
   "devDependencies": {
     "rimraf": "^5.0.0"
