--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@designliquido/delegua-json": "^0.0.0",
     "@designliquido/delegua-matematica": "0.2.0",
     "@designliquido/delegua-tempo": "0.0.1",
-    "lodash.clonedeep": "^4.5.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "rimraf": "^5.0.0"
