Atualização das keywords.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "delegua",
     "matemática",
     "física",
-    "estatística"
+    "estatística",
+    "portugues"
   ],
   "author": "Leonel Sanches da Silva",
   "contributors": [
