- Descrição; - Atualização de `delegua-node` para a versão 1.1.4.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "delegua",
-  "version": "1.0.1",
-  "description": "Pacote NPM da Linguagem Delégua, com todas as bibliotecas oficiais.",
+  "version": "1.0.2",
+  "description": "Pacote NPM da Linguagem Delégua, com todas as bibliotecas oficiais e dialetos de Portugol e Potigol embarcados.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DesignLiquido/delegua-completo.git"
@@ -45,7 +45,7 @@
     "@designliquido/delegua-http": "0.0.2",
     "@designliquido/delegua-json": "0.0.0",
     "@designliquido/delegua-matematica": "0.2.0",
-    "@designliquido/delegua-node": "1.1.3",
+    "@designliquido/delegua-node": "1.1.4",
     "@designliquido/delegua-tempo": "0.0.1",
     "lodash": "^4.17.21"
   },
